# agora

./: .dockerignore  .env.example  .gitignore  001-improvements.md  AGORA_PRD.md  AGORA_TASKS.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  db.py  logging_conf.py  main.py  models.py  scheduler.py  schemas.py  security.py
apps/api/app/clients/: composio_client.py  loops_client.py  openai_client.py  retell_client.py
apps/api/app/routers/: alerts.py  chat.py  company.py  dashboard.py  employees.py  integrations.py  interviews.py  okrs.py  research.py  review.py  session.py  webhooks.py
apps/api/app/services/: email_templates.py  embeddings.py  ics_gen.py  notion_sync.py  okr_extract.py  rag.py  research_agent.py  research_report.py  retell_service.py  scheduler_service.py  slot_picker.py  summary_email.py  synthesis.py  themes.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_gmail_connection.py  0003_email_templates.py  0004_operating_context.py
apps/api/tests/: test_slot_picker.py
apps/web/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/components/: AlertsBanner.tsx  CallView.tsx  ChatDock.tsx  Logo.tsx  Sidebar.tsx
apps/web/components/modules/: EmergingThemes.tsx  (+4 more)
apps/web/lib/: api.ts
scripts/: provision_retell_agent.py  recover_interview.py  seed_demo.py  tunnel.sh
(+15 files in other folders)
