[project]
name = "agora-api"
version = "0.1.0"
description = "Agora API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic[email]>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.13.3",
  "pgvector>=0.3.6",
  "itsdangerous>=2.2.0",
  "httpx>=0.27.2",
  "openai>=1.54.0",
  "openai-agents>=0.0.6",
  "retell-sdk>=5.25.1",
  "composio>=0.7.0",
  "apscheduler>=3.10.4",
  "ics>=0.7.2",
  "hdbscan>=0.8.38",
  "numpy>=1.26.0",
  "python-multipart>=0.0.12",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
